--- a/whatimage_front/public/index.html
+++ b/whatimage_front/public/index.html
@@ -34,7 +34,7 @@
     <!--https://fontawesome.com/-->
     <script src="https://kit.fontawesome.com/9ab1e54a9a.js" crossorigin="anonymous"></script>
 
-    <title>React App</title>
+    <title>What Image</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
